--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,9 @@ name: C/C++ CI
 
 on:
   push:
-    branches: ["branchAutomake"]
+    branches: ["branchAutoPackage"]
   pull_request:
-    branches: ["branchAutomake"]
+    branches: ["branchAutoPackage"]
 
 jobs:
   build:
@@ -13,9 +13,7 @@ jobs:
       - uses: actions/checkout@v4
       
       - name: Install dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y g++ make autoconf automake
+        run: sudo apt-get update && sudo apt-get install -y g++ make autoconf automake dpkg-dev debhelper build-essential
 
       - name: Generate build system
         run: |
@@ -33,3 +31,15 @@ jobs:
         with:
           name: program-dist
           path: program-*.tar.gz
+
+      - name: Build Debian Package
+        run: dpkg-buildpackage -us -uc
+
+      - name: Move Debian Package
+        run: mv ../program_1.0-1_amd64.deb .
+
+      - name: Upload Debian Package
+        uses: actions/upload-artifact@v4
+        with:
+          name: deb_prog
+          path: program_1.0-1_amd64.deb
