--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,5 @@
 AUTOMAKE_OPTIONS = foreign
 bin_PROGRAMS = program
 program_SOURCES = main.cpp FuncA.cpp FuncA.h
+program_CXXFLAGS = -fno-lto
 EXTRA_DIST = Makefile.am
