Add Docker support, refactor main function, and enhance FuncA tests

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,7 +1,11 @@
 AUTOMAKE_OPTIONS = foreign
-bin_PROGRAMS = program
-program_SOURCES = main.cpp FuncA.cpp FuncA.h
-program_CXXFLAGS = -fno-lto
-EXTRA_DIST = Makefile.am
+bin_PROGRAMS = program test_FuncA
+program_SOURCES = main.cpp HTTP_Server.cpp FuncA.cpp
+test_FuncA_SOURCES = test_FuncA.cpp FuncA.cpp
+
+# Add necessary system libraries for socket operations
+program_LDADD = -lpthread
+
+# Adding check target to run tests
 check_PROGRAMS = test_FuncA
-test_FuncA_SOURCES = test_FuncA.cpp FuncA.cpp FuncA.h
+TESTS = test_FuncA
