--- a/configure.ac
+++ b/configure.ac
@@ -1,5 +1,9 @@
 AC_INIT([program], [1.0], [maksym33kostenko@gmail.com])
 AM_INIT_AUTOMAKE([-Wall -Werror])
 AC_PROG_CXX
+
+# Check for required libraries
+AC_CHECK_LIB([pthread], [pthread_create])
+
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
